[gd_scene load_steps=13 format=3 uid="uid://cjqgbnv2uf5rv"]

[ext_resource type="Script" uid="uid://hq0vuwrwygpv" path="res://scripts/world.gd" id="1_uf3he"]
[ext_resource type="PackedScene" uid="uid://by83x3paktynw" path="res://gltf/building.dae" id="2_1lx0s"]
[ext_resource type="PackedScene" uid="uid://cqym6euqmkecd" path="res://scenes/resources/OakTree.tscn" id="4_cxspa"]
[ext_resource type="Script" uid="uid://b4jl266qil6mg" path="res://scripts/resource_system.gd" id="5_cxspa"]
[ext_resource type="PackedScene" uid="uid://djtawjxwim072" path="res://scenes/debug_info.tscn" id="5_wjhqw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1fvuv"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_1x1gn"]
sky_material = SubResource("ProceduralSkyMaterial_1fvuv")

[sub_resource type="Environment" id="Environment_44kk3"]
background_mode = 2
sky = SubResource("Sky_1x1gn")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_cxspa"]
size = Vector2(1000, 1000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oauer"]
albedo_color = Color(0.0728426, 0.0728426, 0.0728426, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_2c3p6"]

[sub_resource type="NavigationMesh" id="NavigationMesh_cjrb1"]
vertices = PackedVector3Array(-67, 0.5, -69.25, -65.75, 0.5, -70, -65.75, 0.5, -499.5, -499.5, 0.5, -499.5, -499.5, 0.5, -68.5, -67, 0.5, -68.5, -52, 0.5, -48.75, -52, 0.5, -47.5, -50.75, 0.5, -46.75, 33, 0.5, -77.75, 33, 0.5, -78.5, 31.75, 0.5, -79.75, 7.75, 0.5, -40.25, -15.5, 0.5, -32.75, -13, 0.5, -32.75, -12.75, 0.5, -33.25, -57.5, 0.5, -52.25, -54.25, 0.5, -49, -52.5, 0.5, -49.25, -64.25, 0.5, -69.5, -64.25, 0.5, -68.25, 38.25, 0.5, -86.25, 39.5, 0.5, -86.75, 39.5, 0.5, -499.5, 1, 0.5, -33.25, 31.75, 0.5, -81, 41.25, 0.5, -84.75, 42.5, 0.5, -84.25, 47.75, 0.5, -77, 49.75, 0.5, -75, 50.25, 0.5, -73.75, 499.5, 0.5, -73.75, 499.5, 0.5, -499.5, 34, 7.25, -79, 40.5, 7.25, -84, 39.25, 7.25, -85.5, 32.75, 7.25, -80.5, 40.5, 0.5, -71.75, 40.5, 0.5, -70.25, 41.75, 0.5, -68.5, 48.75, 0.5, -73.5, 39.5, 0.5, -84.5, 39.5, 0.5, -85, 33.25, 0.5, -80.5, 42.25, 0.5, -82.25, 47, 10.5, -76, 46.75, 10.5, -77, 41.5, 10.5, -83.5, 34.25, 10.5, -78, 39.75, 10.5, -70.5, 39, 0.5, -70, 39.25, 1, -71, 38.25, 0.75, -71.75, 34.75, 1, -76.75, 33.5, 0.5, -77, 14.25, 0.5, -45.5, 47.5, 5.5, -75.25, 40.5, 5.5, -69.75, 41.25, 4.5, -68.5, 42.25, 3.5, -68, 49.25, 3.5, -73.5, 48, 5.5, -75.25, 42.75, 0.5, -67, 41.75, 0.5, -66.75, 41.5, 0.5, -66, 49.5, 0.5, -72.25, 43.5, 0.5, -68, 47.25, 0.5, -6.75, 48.25, 0.5, -5.25, 41, 0.5, -11.25, 50.25, 0.5, -73, 499.5, 0.5, -5.25, 40.25, 0.5, -68, -64, 7.25, -69.75, -63.25, 7, -69, -63.25, 7, -69.75, -71.5, 0.5, -54.25, -70, 0.5, -54, -67, 0.5, -68, -499.5, 0.5, -52.75, -72.25, 0.5, -52.75, -67.75, 12.5, -67.75, -66.25, 12.75, -67.75, -67, 12.75, -68.25, -69.25, 0.5, -53.25, -69.25, 0.5, -52.75, -65, 0.5, -67.25, -66.5, 0.5, -67.5, 38, 0.5, -9.5, 38.5, 0.5, -9.5, 39.75, 0.5, -11.5, 1.5, 0.5, -22.5, 1.5, 0.5, -33, -69, 7.25, -53.5, -68.25, 7, -53.25, -68.5, 7, -54, -69, 7.25, -54, -40.75, 0.5, -9.75, -39.5, 0.5, -10.25, -38.75, 0.5, -11.5, -52.75, 0.5, -46.75, -54.25, 0.5, -46.75, -46, 0.5, -2.5, -45, 1, -2.5, -40.5, 1, -8.5, -47, 0.5, -1.5, -48.5, 0.5, 1, -71.5, 0.5, -51.5, -499.5, 0.5, 1, -54.75, 0.5, -47.25, -54.75, 0.5, -48.5, -70.25, 0.5, -51.5, -73, 12.5, -52, -71.25, 12.75, -52, -72, 12.75, -52.5, -51.75, 7.25, -49, -51, 7, -48.5, -51, 7, -49, -55.5, 12.5, -47.25, -55.5, 12.5, -46.75, -53.75, 12.75, -47.25, -38, 0.5, -12.25, -30, 0.5, -6.5, -15.5, 0.5, -22.5, -16, 0.5, -22.75, -36.5, 0.5, -11.75, -16, 0.5, -32.5, -12, 10.5, -32.25, -12, 10.5, -23, -2.75, 10.5, -23, -2.75, 10.5, -32.25, -1.75, 5.5, -32.25, -1.75, 5.5, -23, 0.5, 3.5, -23, 0.5, 3.5, -32.25, -2.5, 0.5, -24, -2.25, 0.5, -23.25, 0.25, 0.5, -23.25, 0.25, 0.5, -32, -12, 0.5, -31.5, -14.75, 0.5, -31.5, -14.75, 0.5, -23.75, -11.75, 0.5, -32, -15, 7.25, -31.75, -15, 7.25, -23.5, -13, 7.25, -23.5, -13, 7.25, -31.75, -12.75, 0.5, -22, -13, 0.5, -22.5, -30, 0.5, -5.5, -31.25, 0.5, -4.25, -31.75, 0.5, -2.25, -3.25, 0.5, -22, -3.5, 1, -22.75, -11.25, 1, -22.75, -11.75, 0.5, -22, 6.25, 0.5, -16.75, 1, 0.5, -22, 38.25, 0.5, 8.5, 30, 0.5, 2.75, -40, 0.5, 7.75, -40, 0.5, 499.5, 38.25, 0.5, 499.5, -38.5, 0.5, 6.75, 29.5, 0.5, 1.5, 37.25, 0.5, -9, 32.25, 0.5, -1.75, 33, 1, -1.75, 37.5, 1, -7.75, -32.5, 7.25, -4.75, -31, 7.25, -6, -37.5, 7.25, -11, -38.75, 7.25, -9.75, -33, 0.5, -4.25, -31.75, 0.5, -5.5, -32.25, 0.5, -6.75, -37.75, 0.5, -10.5, -45.5, 0.5, -1, -46.75, 0.5, 0.75, -46, 0.5, 1.75, -44.5, 0.5, -1, -43.75, 0.5, -1.75, -39.75, 0.5, 6, -33, 0.5, -3, 45.75, 7.25, -4, 47, 7.25, -5.25, 40.75, 7.25, -10.25, 39.25, 7.25, -9, 45.25, 0.5, -3.75, 46.5, 0.5, -5, 46.5, 0.5, -5.5, 40.25, 0.5, -9.75, 33.5, 0.5, -0.25, 32.5, 0.5, -0.25, 31.25, 0.5, 1.5, 38.25, 0.5, 6.75, 34.25, 0.5, -1, 45, 0.5, -2.25, -45.25, 10.5, -2, -44.5, 10.5, -0.75, -42.25, 10.5, 0.5, -38.75, 10.5, 3.5, -37.75, 10.5, 3.75, -32.5, 10.5, -3.25, -32.5, 10.5, -3.75, -40, 10.5, -9, 33, 10.5, -0.5, 40.25, 10.5, 4.5, 45.5, 10.5, -2.5, 45.25, 10.5, -3.25, 38, 10.5, -8.25, 32.75, 10.5, -1.25, 47, 0.5, -3.75, 46.25, 0.5, -1.5, 39.5, 0.5, 7.5, 499.5, 0.5, 499.5, -46.25, 5.5, -0.5, -47.25, 3.75, 0.75, -47.25, 3.5, 1.25, -40.25, 3.5, 6.5, -39.75, 3.75, 6.5, -38.75, 5.5, 5, -45.5, 5.5, -0.5, -38.75, 5.5, 4.5, 37.5, 3.5, 7, 38.25, 3.75, 7.25, 39.25, 5.25, 6, 39, 5.5, 5, 32.25, 5.5, 0, 30.75, 3.75, 1.5, -47.75, 0.5, 2.25, -499.5, 0.5, 499.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 0, 4), PackedInt32Array(0, 5, 4), PackedInt32Array(8, 7, 6), PackedInt32Array(10, 9, 11), PackedInt32Array(11, 9, 12), PackedInt32Array(15, 14, 13), PackedInt32Array(17, 16, 18), PackedInt32Array(18, 16, 20), PackedInt32Array(18, 20, 19), PackedInt32Array(21, 1, 22), PackedInt32Array(22, 1, 23), PackedInt32Array(23, 1, 2), PackedInt32Array(12, 24, 15), PackedInt32Array(19, 1, 25), PackedInt32Array(25, 1, 21), PackedInt32Array(6, 18, 19), PackedInt32Array(13, 12, 15), PackedInt32Array(8, 6, 19), PackedInt32Array(11, 12, 25), PackedInt32Array(25, 12, 13), PackedInt32Array(25, 13, 8), PackedInt32Array(25, 8, 19), PackedInt32Array(26, 22, 27), PackedInt32Array(27, 22, 23), PackedInt32Array(28, 27, 29), PackedInt32Array(29, 27, 23), PackedInt32Array(29, 23, 30), PackedInt32Array(30, 23, 31), PackedInt32Array(31, 23, 32), PackedInt32Array(36, 35, 33), PackedInt32Array(33, 35, 34), PackedInt32Array(38, 37, 39), PackedInt32Array(39, 37, 40), PackedInt32Array(43, 42, 41), PackedInt32Array(41, 44, 43), PackedInt32Array(43, 44, 37), PackedInt32Array(37, 44, 40), PackedInt32Array(46, 45, 47), PackedInt32Array(47, 45, 48), PackedInt32Array(48, 45, 49), PackedInt32Array(52, 51, 50), PackedInt32Array(53, 52, 54), PackedInt32Array(54, 52, 50), PackedInt32Array(54, 50, 55), PackedInt32Array(54, 55, 9), PackedInt32Array(9, 55, 12), PackedInt32Array(58, 57, 59), PackedInt32Array(59, 57, 56), PackedInt32Array(59, 56, 61), PackedInt32Array(59, 61, 60), PackedInt32Array(64, 63, 62), PackedInt32Array(62, 66, 65), PackedInt32Array(62, 65, 64), PackedInt32Array(64, 65, 67), PackedInt32Array(67, 65, 68), PackedInt32Array(67, 69, 64), PackedInt32Array(65, 70, 68), PackedInt32Array(68, 70, 71), PackedInt32Array(71, 70, 31), PackedInt32Array(70, 30, 31), PackedInt32Array(63, 64, 72), PackedInt32Array(72, 64, 55), PackedInt32Array(50, 72, 55), PackedInt32Array(75, 74, 73), PackedInt32Array(78, 77, 76), PackedInt32Array(78, 76, 5), PackedInt32Array(5, 76, 80), PackedInt32Array(5, 80, 79), PackedInt32Array(5, 79, 4), PackedInt32Array(81, 83, 82), PackedInt32Array(85, 84, 16), PackedInt32Array(16, 84, 86), PackedInt32Array(16, 86, 20), PackedInt32Array(84, 87, 86), PackedInt32Array(78, 87, 77), PackedInt32Array(77, 87, 84), PackedInt32Array(89, 88, 90), PackedInt32Array(90, 88, 91), PackedInt32Array(24, 12, 92), PackedInt32Array(92, 12, 55), PackedInt32Array(92, 55, 91), PackedInt32Array(91, 55, 90), PackedInt32Array(90, 55, 69), PackedInt32Array(69, 55, 64), PackedInt32Array(96, 95, 93), PackedInt32Array(93, 95, 94), PackedInt32Array(98, 97, 99), PackedInt32Array(99, 97, 100), PackedInt32Array(100, 97, 101), PackedInt32Array(104, 103, 102), PackedInt32Array(104, 102, 97), PackedInt32Array(97, 102, 105), PackedInt32Array(97, 105, 101), PackedInt32Array(107, 106, 80), PackedInt32Array(80, 106, 79), PackedInt32Array(79, 106, 108), PackedInt32Array(111, 110, 109), PackedInt32Array(109, 101, 111), PackedInt32Array(111, 101, 107), PackedInt32Array(107, 101, 105), PackedInt32Array(107, 105, 106), PackedInt32Array(17, 110, 16), PackedInt32Array(16, 110, 85), PackedInt32Array(85, 110, 111), PackedInt32Array(112, 114, 113), PackedInt32Array(117, 116, 115), PackedInt32Array(120, 119, 118), PackedInt32Array(7, 8, 100), PackedInt32Array(100, 8, 121), PackedInt32Array(100, 121, 99), PackedInt32Array(123, 122, 124), PackedInt32Array(124, 122, 125), PackedInt32Array(8, 13, 126), PackedInt32Array(125, 121, 124), PackedInt32Array(124, 121, 126), PackedInt32Array(126, 121, 8), PackedInt32Array(130, 129, 127), PackedInt32Array(127, 129, 128), PackedInt32Array(134, 133, 131), PackedInt32Array(131, 133, 132), PackedInt32Array(136, 135, 137), PackedInt32Array(137, 135, 138), PackedInt32Array(141, 140, 139), PackedInt32Array(139, 142, 141), PackedInt32Array(141, 142, 135), PackedInt32Array(135, 142, 138), PackedInt32Array(146, 145, 143), PackedInt32Array(143, 145, 144), PackedInt32Array(123, 148, 147), PackedInt32Array(151, 150, 149), PackedInt32Array(154, 153, 152), PackedInt32Array(154, 152, 155), PackedInt32Array(155, 152, 156), PackedInt32Array(152, 157, 156), PackedInt32Array(159, 158, 160), PackedInt32Array(160, 158, 162), PackedInt32Array(160, 162, 161), PackedInt32Array(147, 155, 156), PackedInt32Array(149, 122, 123), PackedInt32Array(147, 156, 123), PackedInt32Array(123, 156, 151), PackedInt32Array(151, 156, 163), PackedInt32Array(151, 149, 123), PackedInt32Array(164, 159, 156), PackedInt32Array(156, 159, 163), PackedInt32Array(163, 159, 160), PackedInt32Array(157, 91, 156), PackedInt32Array(156, 91, 165), PackedInt32Array(165, 91, 88), PackedInt32Array(167, 166, 168), PackedInt32Array(168, 166, 165), PackedInt32Array(165, 166, 156), PackedInt32Array(156, 166, 164), PackedInt32Array(172, 171, 169), PackedInt32Array(169, 171, 170), PackedInt32Array(174, 173, 175), PackedInt32Array(175, 173, 176), PackedInt32Array(177, 180, 178), PackedInt32Array(178, 180, 179), PackedInt32Array(173, 183, 176), PackedInt32Array(176, 183, 181), PackedInt32Array(181, 183, 179), PackedInt32Array(179, 183, 182), PackedInt32Array(179, 180, 181), PackedInt32Array(185, 184, 186), PackedInt32Array(186, 184, 187), PackedInt32Array(189, 188, 190), PackedInt32Array(190, 188, 191), PackedInt32Array(193, 192, 194), PackedInt32Array(194, 192, 195), PackedInt32Array(195, 192, 196), PackedInt32Array(188, 197, 191), PackedInt32Array(191, 197, 196), PackedInt32Array(196, 197, 195), PackedInt32Array(200, 199, 198), PackedInt32Array(200, 202, 201), PackedInt32Array(203, 202, 204), PackedInt32Array(204, 202, 200), PackedInt32Array(204, 200, 198), PackedInt32Array(204, 198, 205), PackedInt32Array(211, 210, 206), PackedInt32Array(206, 210, 209), PackedInt32Array(206, 209, 208), PackedInt32Array(206, 208, 207), PackedInt32Array(212, 68, 213), PackedInt32Array(213, 68, 71), PackedInt32Array(214, 71, 158), PackedInt32Array(158, 71, 162), PackedInt32Array(162, 71, 215), PackedInt32Array(214, 213, 71), PackedInt32Array(218, 217, 216), PackedInt32Array(221, 220, 219), PackedInt32Array(221, 219, 223), PackedInt32Array(223, 219, 222), PackedInt32Array(222, 219, 216), PackedInt32Array(216, 219, 218), PackedInt32Array(225, 224, 226), PackedInt32Array(226, 224, 227), PackedInt32Array(227, 224, 228), PackedInt32Array(228, 224, 229), PackedInt32Array(108, 106, 230), PackedInt32Array(230, 160, 108), PackedInt32Array(108, 160, 161), PackedInt32Array(108, 161, 231)]
geometry_source_geometry_mode = 1
geometry_source_group_name = &"Environment"

[node name="World" type="Node"]
script = ExtResource("1_uf3he")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_44kk3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 20.2515, 0)
shadow_enabled = true

[node name="Units" type="Node" parent="."]

[node name="Enviroment" type="Node" parent="."]

[node name="Buildings" type="Node3D" parent="Enviroment"]

[node name="building" parent="Enviroment/Buildings" groups=["Environment"] instance=ExtResource("2_1lx0s")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -7.3867, 1.90735e-06, -27.6536)

[node name="building2" parent="Enviroment/Buildings" groups=["Environment"] instance=ExtResource("2_1lx0s")]
transform = Transform3D(-0.789223, 0, -0.614106, 0, 1, 0, 0.614106, 0, -0.789223, 40.6973, 1.90735e-06, -77.0287)

[node name="building3" parent="Enviroment/Buildings" groups=["Environment"] instance=ExtResource("2_1lx0s")]
transform = Transform3D(-0.80047, 0, 0.599373, 0, 1, 0, -0.599373, 0, -0.80047, 39.1594, 1.90735e-06, -1.83928)

[node name="building4" parent="Enviroment/Buildings" groups=["Environment"] instance=ExtResource("2_1lx0s")]
transform = Transform3D(-0.80047, 0, 0.599373, 0, 1, 0, -0.599373, 0, -0.80047, -38.8923, 1.90735e-06, -2.5454)

[node name="Resources" type="Node3D" parent="Enviroment"]

[node name="OakTree" parent="Enviroment/Resources" groups=["Environment"] instance=ExtResource("4_cxspa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -70.5147, 0, -52.8744)

[node name="OakTree2" parent="Enviroment/Resources" groups=["Environment"] instance=ExtResource("4_cxspa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -65.3873, 0, -68.6427)

[node name="OakTree3" parent="Enviroment/Resources" groups=["Environment"] instance=ExtResource("4_cxspa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -53.0978, 0, -47.9777)

[node name="Floor" type="Node3D" parent="Enviroment" groups=["Environment"]]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enviroment/Floor"]
mesh = SubResource("PlaneMesh_cxspa")
surface_material_override/0 = SubResource("StandardMaterial3D_oauer")

[node name="StaticBody3D" type="StaticBody3D" parent="Enviroment/Floor/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enviroment/Floor/MeshInstance3D/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_2c3p6")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_cjrb1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 442.0
offset_top = 211.0
offset_right = -442.0
offset_bottom = -211.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Address Entry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="Port Entry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "9999"
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cdykdax77yjlk", "uid://cfad5wy2om38f", "uid://dfwp15ggm3meq")
spawn_path = NodePath("..")

[node name="DebugInfo" parent="." instance=ExtResource("5_wjhqw")]

[node name="ResourceSystem" type="Node" parent="."]
script = ExtResource("5_cxspa")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
